# gitpod_cpp_template

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  CMakeLists.txt  README.md  conanfile.txt  main.cpp  mplpp_example.cpp
.theia/: launch.json  settings.json  tasks.json
include/: example.hpp
